--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
@@ -11,4 +10,8 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.parallax-container {
+  height: 75px;
 }
