--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,6 @@
 .Header {
-  background: url("../../images/man.jpg");
+  background: #555555;
+  background: url("../../images/papers.co-mt78-night-sky-star-shine-nature-fall-1920x1080.jpg");
   background-size: cover;
   background-position: center;
   min-height: 1000px;
